# clash

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  mise.toml
client/: Cargo.toml  build-local.sh  build-remote.sh  game.json  index.html  wasm-bindgen-macroquad.sh
client/js/: package-lock.json  package.json  webpack.config.js
client/js/src/: control.js  index.js  run.js
client/remote_client/: control.js  index.js  package-lock.json  package.json  run.js  webpack.config.js
client/remote_client/src/: control.js  index.js  run.js
client/src/: action_buttons.rs  advance_ui.rs  assets.rs  cards_ui.rs  city_ui.rs  client.rs  client_state.rs  collect_ui.rs  combat_ui.rs  construct_ui.rs  custom_actions_ui.rs  custom_phase_ui.rs  dialog_ui.rs  event_ui.rs  game_loop.rs  game_sync.rs  happiness_ui.rs  hex_ui.rs  influence_ui.rs  info_ui.rs  layout_ui.rs  lib.rs  local_client.rs  local_ui.rs  log_collector.rs  log_ui.rs  main.rs  map.rs  map_ui.rs  move_ui.rs  multiline.rs  payment.rs  payment_ui.rs  player_ui.rs  recruit_unit_ui.rs  remote_client.rs  render_context.rs  resource_ui.rs  richtext.rs  select_ui.rs  (+7 more)
client/www/: index.js  package-lock.json  package.json  start.sh  webpack.config.js
server/: Cargo.toml  build-wasm.sh  edit-client.cmd  git-update.cmd  run-ai.cmd  run-client.cmd  update.cmd
server/.config/: nextest.toml
server/src/: ability_initializer.rs  action.rs  action_card.rs  action_cost.rs  advance.rs  ai.rs  ai_actions.rs  ai_collect.rs  ai_missions.rs  army.rs  available_actions.rs  barbarians.rs  building.rs  cache.rs  card.rs  city.rs  city_pieces.rs  city_tests.rs  civilization.rs  collect.rs  combat.rs  combat_listeners.rs  combat_roll.rs  combat_stats.rs  construct.rs  consts.rs  content.rs  cultural_influence.rs  events.rs  explore.rs  game.rs  game_api.rs  game_api_wrapper.rs  game_data.rs  game_setup.rs  happiness.rs  hexagon.rs  incident.rs  landmark.rs  leader.rs  (+34 more)
server/src/content/: ability.rs  action_cards.rs  advances.rs  advances_agriculture.rs  advances_autocracy.rs  advances_construction.rs  advances_culture.rs  advances_democracy.rs  advances_economy.rs  advances_education.rs  advances_science.rs  advances_seafearing.rs  advances_spirituality.rs  advances_theocracy.rs  advances_warfare.rs  builtin.rs  civilizations.rs  custom_actions.rs  custom_phase_actions.rs  effects.rs  incidects_civil_war.rs  incidents.rs  incidents_1.rs  incidents_2.rs  incidents_5.rs  incidents_earthquake.rs  incidents_famine.rs  incidents_good_year.rs  incidents_population_boom.rs  incidents_trade.rs  incidents_trojan.rs  objective_cards.rs  objectives.rs  persistent_events.rs  tactics_cards.rs  technologies.rs  trade_routes.rs  wonders.rs
server/src/content/action_cards/: cultural_takeover.rs  development.rs  inspiration.rs  mercenaries.rs  mercenary.rs  negotiation.rs  spy.rs  synergies.rs
server/src/content/advances/: agriculture.rs  autocracy.rs  construction.rs  culture.rs  democracy.rs  economy.rs  education.rs  science.rs  seafaring.rs  seafearing.rs  spirituality.rs  theocracy.rs  trade_routes.rs  warfare.rs
server/src/content/civilizations/: china.rs  egypt.rs  greece.rs  maya.rs  rome.rs  vikings.rs
server/src/content/incidents/: civil_war.rs  earthquake.rs  famine.rs  good_year.rs  great_builder.rs  great_builders.rs  great_diplomat.rs  great_explorer.rs  great_persons.rs  great_warlord.rs  pandemics.rs  trade.rs  trojan.rs
server/src/content/objectives/: advance_objectives.rs  city_objectives.rs  combat.rs  combat_objectives.rs  non_combat.rs  resource_objectives.rs  status_phase_objectives.rs  unit_objectives.rs
server/tests/: action_card_tests.rs  advances_tests.rs  ai_tests.rs  civ_china_tests.rs  civ_egypt_tests.rs  civ_greece_tests.rs  civ_maya_tests.rs  civ_rome_tests.rs  civ_tests.rs  civ_vikings_tests.rs  combat_tests.rs  game_api_tests.rs  great_person_tests.rs  incident_tests.rs  movement_tests.rs  objective_card_instant_tests.rs  objective_card_status_phase_tests.rs  objective_card_tests.rs  random_actions.rs  status_phase_tests.rs  tactics_card_tests.rs  wonder_tests.rs
server/tests/common/: mod.rs
server/tests/test_games/: absolute_power.json  absolute_power.outcome.json  ask_for_siegecraft.json  ask_for_siegecraft.outcome.json  attack_with_siegecraft.json  attack_with_siegecraft.outcome.json  barbarians_attack.json  barbarians_attack.outcome.json  barbarians_move.json  barbarians_move.outcome.json  barbarians_move.outcome1.json  barbarians_recapture_city.json  barbarians_recapture_city.outcome.json  barbarians_spawn.json  barbarians_spawn.outcome.json  barbarians_spawn.outcome1.json  barbarians_spawn.outcome2.json  change_government.json  change_government.outcome.json  civ_maya_leader_pakal.json  civ_maya_leader_pakal.outcome.json  civ_maya_leader_pakal.outcome1.json  civil_liberties.json  civil_liberties.outcome.json  civil_liberties.outcome1.json  civil_rights.json  civil_rights.outcome.json  civil_rights.outcome1.json  civil_war.json  civil_war.outcome.json  collect.json  collect.outcome.json  collect_free_economy.json  collect_free_economy.outcome.json  collect_husbandry.json  collect_husbandry.outcome.json  combat_all_modifiers.json  combat_all_modifiers.outcome.json  combat_all_modifiers.outcome0.json  combat_all_modifiers.outcome1.json  (+198 more)
server/tests/test_games/action_cards/: advance.json  advance.outcome.json  advance.outcome1.json  advance.outcome2.json  assassination.json  assassination.outcome2.json  assassination.outcome3.json  city_development.json  city_development.outcome1.json  city_development.outcome2.json  cultural_takeover.json  cultural_takeover.outcome.json  cultural_takeover.outcome1.json  cultural_takeover.outcome2.json  explorer.json  (+41 more)
(+559 files in other folders)
