[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "local_client"
license = "MIT"
repository = "git@github.com:boardgamers/clash.git"
homepage = "https://www.boardgamers.space/"
description = "A client for Clash of Cultures"

[profile.dev]
debug = true

[profile.release]
debug = true

[dependencies]
macroquad = "0.4.13"
hex2d = "1.1.0"
itertools = "0.14.0"
serde_json = "1.0.138"
server = { path = "../server", version = "0.1.0" }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.50"
lazy_static = "1.4.0"
log = "0.4.26"
async-std = "1.13.0"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.72", features = ["Window"] }
js-sys = "0.3.72"

[[bin]]
name = "local_client"
path = "src/local_client/bin/main.rs"

[[bin]]
name = "remote_client"
path = "src/remote_client/bin/main.rs"
