[package]
name = "client"
version = "0.1.0"
edition = "2024"
default-run = "local_client"
license = "MIT"
repository = "git@github.com:boardgamers/clash.git"
homepage = "https://www.boardgamers.space/"
description = "A client for Clash of Cultures"

[profile.dev]
debug = true

[profile.release]
debug = true

[dependencies]
macroquad = "0.4.14"
hex2d = "1.1.0"
itertools = "0.14.0"
serde_json = "1.0.140"
server = { path = "../server", version = "0.1.0" }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.72", features = ["Window"] }
pyroscope = { version = "0.5.8", optional = true }
pyroscope_pprofrs = { version = "0.2.8", optional = true }

[features]
profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]
ai = []

[[bin]]
name = "local_client"
path = "src/local_client/bin/main.rs"

[[bin]]
name = "remote_client"
path = "src/remote_client/bin/main.rs"
