[package]
name = "client"
version = "0.1.0"
edition = "2024"
default-run = "local_client"
license = "MIT"
repository = "git@github.com:boardgamers/clash.git"
homepage = "https://www.boardgamers.space/"
description = "A client for Clash of Cultures"

[dependencies]
macroquad = "0.4.14"
hex2d = "1.1.0"
itertools = "0.14.0"
serde_json = "1.0.140"
server = { path = "../server" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = ["Window"] }
pyroscope = { version = "0.5.8", optional = true }
pyroscope_pprofrs = { version = "0.2.10", optional = true }

[features]
profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]

[[bin]]
name = "local_client"
path = "src/local_client/bin/main.rs"

[[bin]]
name = "remote_client"
path = "src/remote_client/bin/main.rs"
