[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "git@github.com:boardgamers/clash.git"
homepage = "https://www.boardgamers.space/"
description = "A server for Clash of Cultures"

[lib]
name = "server"
crate-type = ["cdylib", "rlib"]

[dependencies]
hex2d = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.95"
async-std = "1.13.1"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.0"
itertools = "0.14.0"
console_error_panic_hook = "0.1.7"
num = "0.4"
json-patch = "4.0.0"
pathfinding = "4.14.0"
tokio = { version = "1.44.2", features = ["full"] }
num_cpus = "1.16.0"
readonly = "0.2.13"
enumset = { version = "1.1.5" }
rustc-hash = "2.1.1"
pyroscope = { version = "0.5.8", optional = true }
pyroscope_pprofrs = { version = "0.2.8", optional = true }

[features]
profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]
